--- a/example_0.html
+++ b/example_0.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      body {
+        line-height: 0;
+        margin: 0;
+      }
+      canvas {
+        width: 100vw;
+        height: 100vh;
+      }
+    </style>
 		<meta charset="utf-8" http-equiv="content-type" content="text/html;charset=utf-8"/>
 		<meta name="viewport" content="initial-scale=1.0, width=device-width">
 		<meta name="google" content="notranslate">
