added FPS counter

--- a/example_0.html
+++ b/example_0.html
@@ -11,6 +11,13 @@
         width: 100vw;
         height: 100vh;
       }
+      div {
+        position: fixed;
+        top: 1.9vh;
+        right: 0;
+        color: #fff;
+        font-size: 4vh;
+      }
     </style>
 		<meta charset="utf-8" http-equiv="content-type" content="text/html;charset=utf-8"/>
 		<meta name="viewport" content="initial-scale=1.0, width=device-width">
