--- a/example_0.html
+++ b/example_0.html
@@ -3,20 +3,20 @@
   <head>
     <style>
       body {
-        background-color: #333;
-        line-height: 0;
-        margin: 0;
+        background-color: #333333;
+        color: #ffffff;
+        font-size: 4vmin;
+        margin: 0px;
       }
       canvas {
+        display: block;
         width: 100vw;
         height: 100vh;
       }
       div {
         position: fixed;
-        top: 1.9vh;
-        right: 0;
-        color: #fff;
-        font-size: 4vh;
+        right: 0px;
+        top: 0px;
       }
     </style>
 		<meta charset="utf-8" http-equiv="content-type" content="text/html;charset=utf-8"/>
