light composition, wierd patterns in noise with high sample count

--- a/example_0.html
+++ b/example_0.html
@@ -3,8 +3,8 @@
   <head>
     <style>
       body {
-        background-color: #333333;
-        color: #ffffff;
+        background-color: #222;
+        color: #fff;
         font-size: 4vmin;
         margin: 0px;
       }
