made plane in example diffuser

--- a/example_0.html
+++ b/example_0.html
@@ -9,6 +9,7 @@
         margin: 0px;
       }
       canvas {
+        image-rendering: pixelated;
         display: block;
         width: 100vw;
         height: 100vh;
