--- a/example_emissive.html
+++ b/example_emissive.html
@@ -25,7 +25,7 @@
 		<meta name="google" content="notranslate">
     <!-- Import javascript files. -->
     <script type="text/javascript" src="./raytracer_v1.0.js"></script>
-    <script type="text/javascript" src="./example_emissive.js"></script>
+    <script type="text/javascript" src="./scripts/example_emissive.js"></script>
   </head>
   <body></body>
 </html>
