new example + reworked filter for perfectly reflective materials

--- a/example_rubix.html
+++ b/example_rubix.html
@@ -25,7 +25,7 @@
 		<meta name="google" content="notranslate">
     <!-- Import javascript files. -->
     <script type="text/javascript" src="./raytracer_v1.0.js"></script>
-    <script type="text/javascript" src="./scripts/emissive.js"></script>
+    <script type="text/javascript" src="./scripts/rubix.js"></script>
   </head>
   <body></body>
 </html>
