removed version number from file

--- a/example_1.html
+++ b/example_1.html
@@ -24,7 +24,7 @@
 		<meta name="viewport" content="initial-scale=1.0, width=device-width">
 		<meta name="google" content="notranslate">
     <!-- Import javascript files. -->
-    <script type="text/javascript" src="./raytracer_v1.0.js"></script>
+    <script type="text/javascript" src="./raytracer.js"></script>
     <script type="text/javascript" src="./scripts/example_1.js"></script>
   </head>
   <body></body>
