--- a/example_1.html
+++ b/example_1.html
@@ -1,31 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      body {
-        background-color: #222;
-        color: #fff;
-        font-size: 4vmin;
-        margin: 0px;
-      }
-      canvas {
-        image-rendering: pixelated;
-        display: block;
-        width: 100vw;
-        height: 100vh;
-      }
-      div {
-        position: fixed;
-        right: 0px;
-        top: 0px;
-      }
-    </style>
 		<meta charset="utf-8" http-equiv="content-type" content="text/html;charset=utf-8"/>
 		<meta name="viewport" content="initial-scale=1.0, width=device-width">
 		<meta name="google" content="notranslate">
+		<link href = "style.css" rel = "stylesheet"/>
     <!-- Import javascript files. -->
-    <script type="text/javascript" src="./raytracer.js"></script>
-    <script type="text/javascript" src="./scripts/example_1.js"></script>
+		<script src="io.js"></script>
+    <script src="raytracer.js"></script>
+    <script src="scripts/example_1.js"></script>
   </head>
-  <body></body>
 </html>
