--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -26,13 +26,18 @@
 				<label for = "antialiasing">Antialiasing</label>
 				<input id = "antialiasing" type = "checkbox"></input>
 				<label for = "samplesPerRay">Sample Count</label>
+        <output>1</output>
+        <br>
 				<input id = "samplesPerRay" type = "range" min = "1" max = "64" value = "1"/>
 				<label for = "renderQuality">Resolution</label>
+        <output>1</output>
 				<input id = "renderQuality" type = "range" min = "0.2" max = "2" step = "0.1" value = "1"/>
 				<label for = "maxReflections">Number of reflections</label>
+        <output>3</output>
 				<input id = "maxReflections" type = "range" min = "1" max = "16"/>
         <label for = "minImportancy" title = "Deletes rays when they lose intensity">Minimum ray intensity</label>
-        <input id = "minImportancy" type = "range" min = "0" max = "1" step = "0.05" value = "0.3"/>
+        <output>0.3</output>
+        <input id = "minImportancy" type = "range" min = "0" max = "1" step = "0.05" value = "0.3" />
 			</form>
     </div>
 	</body>
