--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -28,16 +28,22 @@
 				<label for = "samplesPerRay">Sample Count</label>
         <output>1</output>
         <br>
-				<input id = "samplesPerRay" type = "range" min = "1" max = "8" value = "1"/>
+				<input class = "slider" id = "samplesPerRay" type = "range" min = "1" max = "8" value = "1"/>
+        <br>
 				<label for = "renderQuality">Resolution</label>
         <output>1</output>
-				<input id = "renderQuality" type = "range" min = "0.2" max = "2" step = "0.1" value = "1"/>
+        <br>
+				<input class = "slider" id = "renderQuality" type = "range" min = "0.2" max = "2" step = "0.1" value = "1"/>
+        <br>
 				<label for = "maxReflections">Number of reflections</label>
         <output>3</output>
-				<input id = "maxReflections" type = "range" min = "1" max = "16"/>
+        <br>
+				<input class = "slider" id = "maxReflections" type = "range" min = "1" max = "16"/>
+        <br>
         <label for = "minImportancy" title = "Deletes rays when they lose intensity">Minimum ray intensity</label>
         <output>0.3</output>
-        <input id = "minImportancy" type = "range" min = "0" max = "1" step = "0.05" value = "0.3" />
+        <br>
+        <input class = "slider" id = "minImportancy" type = "range" min = "0" max = "1" step = "0.05" value = "0.3" />
 			</form>
     </div>
 	</body>
