--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -5,9 +5,11 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<link href = "style.css" rel = "stylesheet"/>
-    <script src="raytracer.js"></script>
-		<script src="load.js"></script>
-		<script src="io.js"></script>
+    <script type="module">
+      import {FlexLight} from "./flexlight.js";
+      window.FlexLight = FlexLight;
+    </script>
+		<script defer src="load.js"></script>
 	</head>
 	<body>
     <div id = "controlPanel">
