proper glass filtering for clear none blurry glas

--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -29,6 +29,8 @@
 				<input id = "filter" type = "checkbox"/>
 				<label for = "antialiasing">Antialiasing</label>
 				<input id = "antialiasing" type = "checkbox"></input>
+				<label for = "hdr">HDR</label>
+				<input id = "hdr" type = "checkbox"></input>
         <br>
         <label for = "renderQuality">Resolution</label>
         <output>1</output>
