added obj file support and cube .obj as an example

--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -9,7 +9,7 @@
       import {FlexLight} from "./flexlight.js";
       window.FlexLight = FlexLight;
     </script>
-		<script defer src="load.js"></script>
+		<script defer src="loader.js"></script>
 	</head>
 	<body>
     <div id = "controlPanel">
