First try of RIS for direct Illumination

--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -33,6 +33,8 @@
 			<input id="raytracing" type="checkbox" checked></input>
 			<label for="filter">Filter</label>
 			<input id="filter" type="checkbox"/>
+			<label for="temporal">Temporal</label>
+			<input id="temporal" type="checkbox"/>
 			<label for="hdr">HDR</label>
 			<input id="hdr" type="checkbox"></input>
 			<br>
@@ -45,7 +47,7 @@
 			<label for="samplesPerRay">Sample Count</label>
 			<output>1</output>
 			<br>
-			<input class="slider" id="samplesPerRay" type="range" min="1" max="8" value="1"/>
+			<input class="slider" id="samplesPerRay" type="range" min="1" max="32" value="1"/>
 
 			<br>
 			<label for="maxReflections">Number of reflections</label>
