ensure no other instance is running in background

--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -29,8 +29,8 @@
 				<option value="fxaa">FXAA</option>
 				<option value="none">None</option>
 			</select>
-			<label for="raytracing">Raytracing</label>
-			<input id="raytracing" type="checkbox" checked></input>
+			<label for="pathtracing">Path-Tracing</label>
+			<input id="pathtracing" type="checkbox" checked></input>
 			<label for="filter">Filter</label>
 			<input id="filter" type="checkbox"/>
 			<label for="temporal">Temporal</label>
