--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0, exampleLoader.html?v=example1"/>
+		<meta http-equiv="refresh" content="0, exampleLoader.html?v=wave"/>
 	</head>
 </html>
