started working on webgpu mode that is integrated but only renders one triangle for now.

--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -31,6 +31,7 @@
 			<label for="api">API</label>
 			<select id="api" name="api">
 				<option value="webgl2">WebGL2</option>
+				<option value="webgpu">WebGPU</option>
 			</select>
 			<br>
 			<label for="antialiasing">Antialiasing</label>
