implemented new webgpu projection that is more memory efficient.

--- a/exampleLoader.html
+++ b/exampleLoader.html
@@ -17,6 +17,7 @@
 	</head>
 	<body>
     <div id = "controlPanel">
+		<button id="screenshot">Screenshot</button>
 		<form id="scriptForm" action="." method="GET">
 			<label for="v">Scene</label>
 			<select name="v">
