fixed switching between scenes

--- a/public/loader.html
+++ b/public/loader.html
@@ -12,12 +12,17 @@
 			<button id="screenshot">Screenshot</button>
 			<form id="scriptForm" action="." method="GET">
 				<label for="v">Scene</label>
-				<select name="v">
+				<select name="v" id="scriptFormSelect">
 					<option value="example1">Example 1</option>
 					<option value="example2">Example 2</option>
-					<option value="cornell">Cornell</option>
-					<option value="emissive">Emissive</option>
-					<option value="wave">Wave</option>
+					<option value="example3">Example 3</option>
+					<option value="dragon">Dragon</option>
+					<option value="robot">Robot</option>
+					<!-- 
+						<option value="example2">Example 2</option>
+						<option value="cornell">Cornell</option>
+						<option value="emissive">Emissive</option>
+					 -->
 				</select>
 			</form>
 		</div>
