--- a/public/loader.html
+++ b/public/loader.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id ="controlPanel">
-			<button id="screenshot">Screenshot</button>
+			<!--<button id="screenshot">Screenshot</button>-->
 			<form id="scriptForm" action="." method="GET">
 				<label for="v">Scene</label>
 				<select name="v" id="scriptFormSelect">
